# coding-agent-eval

./: .gitignore  CLAUDE.md  Dockerfile.eval  README.md  index.html  pyproject.toml  reproducibility.html
.github/workflows/: test.yml
cae/: __init__.py  __main__.py  cli.py  docker_run.py  grader.py  harness.py  importer.py  metrics.py  parsers.py  pricing.json  pricing.py  render_markdown.py  site.py  site_archive.py
cae/agents/: __init__.py  aider.py  base.py  claude_code.py  codex.py  mock.py
data/: results.json
data/details/: 2026-06-08T03-13-28__claude-code__astropy__astropy-13977.json  2026-06-08T03-13-59__claude-code__astropy__astropy-14096.json  2026-06-08T03-14-30__claude-code__astropy__astropy-14182.json  2026-06-08T03-15-02__claude-code__astropy__astropy-14309.json  2026-06-08T03-16-02__claude-code__astropy__astropy-14369.json  2026-06-08T03-16-32__claude-code__astropy__astropy-14508.json  2026-06-08T03-17-04__claude-code__astropy__astropy-14539.json  2026-06-08T03-17-36__claude-code__astropy__astropy-14598.json  2026-06-08T03-18-28__claude-code__astropy__astropy-7671.json  2026-06-08T03-26-26__codex__astropy__astropy-13236.json  2026-06-08T03-56-50__codex__astropy__astropy-13453.json  2026-06-08T04-05-08__codex__astropy__astropy-14096.json  2026-06-08T04-05-39__codex__astropy__astropy-14182.json  2026-06-08T04-06-11__codex__astropy__astropy-14309.json  2026-06-08T04-08-12__codex__astropy__astropy-14539.json  2026-06-08T04-09-18__codex__astropy__astropy-7166.json  2026-06-08T05-23-02__claude-code__astropy__astropy-13579.json  2026-06-08T05-39-35__codex__astropy__astropy-13398.json  2026-06-08T05-47-13__codex__astropy__astropy-13579.json  2026-06-20T03-48-32__claude-code__glm-5.2__astropy__astropy-7166.json  2026-06-20T03-51-10__claude-code__glm-5.2__astropy__astropy-7166.json  2026-06-20T03-53-03__claude-code__glm-5.2__astropy__astropy-7166.json  2026-06-20T03-58-11__claude-code__glm-5.2__astropy__astropy-7166.json  2026-06-20T09-23-54__claude-code__glm-5.2__astropy__astropy-14182.json  2026-06-20T09-24-03__claude-code__glm-5.2__astropy__astropy-13453.json  2026-06-20T09-24-11__codex__MiniMax-M3__astropy__astropy-14182.json  2026-06-20T09-24-20__codex__MiniMax-M3__astropy__astropy-13453.json  2026-06-20T09-24-50__codex__MiniMax-M3__astropy__astropy-12907.json  2026-06-20T09-24-56__claude-code__glm-5.2__astropy__astropy-12907.json  2026-06-20T09-37-15__claude-code__glm-5.2__astropy__astropy-7671.json  2026-06-20T09-38-42__codex__MiniMax-M3__astropy__astropy-7671.json  2026-06-20T09-38-54__codex__MiniMax-M3__astropy__astropy-13033.json  2026-06-20T09-41-29__claude-code__glm-5.2__astropy__astropy-13033.json  2026-06-20T14-02-11__aider__anthropic-claude-opus-4-7__astropy__astropy-12907.json  2026-06-20T14-04-13__aider__anthropic-claude-opus-4-7__astropy__astropy-13033.json  2026-06-20T14-06-15__aider__anthropic-claude-opus-4-7__astropy__astropy-7671.json  astropy__astropy-12907__claude-code.json  astropy__astropy-12907__codex.json  astropy__astropy-13033__claude-code.json  astropy__astropy-13033__codex.json  (+26 more)
docs/: adding-agents.md  adding-tasks.md  docker-eval.md  reproducibility.md  smoke-test.md
docs/superpowers/plans/: 2026-06-07-coding-agent-eval.md  2026-06-14-self-improve-forward-pivot.md  2026-06-14-self-improve-skill.md  2026-06-17-dry-run-flag.md  2026-06-17-parallel-flag.md  2026-06-18-per-stage-timeouts.md  2026-06-18-validate-env-hook.md
docs/superpowers/specs/: 2026-06-06-coding-agent-eval-design.md  2026-06-14-self-improve-forward-pivot-design.md  2026-06-14-self-improve-skill-design.md
pae/: __init__.py  __main__.py  cli.py  docker_run.py  grader.py  harness.py  importer.py  metrics.py  parsers.py  render_table.py  site.py
pae/agents/: __init__.py  aider.py  base.py  claude_code.py  codex.py  mock.py
scripts/: deploy_site.sh  patch_astropy_collections.sh  reprice_results.py  run_eval.sh
self-improve-skill/: README.md  SKILL.md
self-improve-skill/scripts/: install.sh
self-improve-skill/tests/: SMOKE_CHECKLIST.md  test_fixture_project.py  test_static_checks.py
tasks/: astropy__astropy-12907.html  astropy__astropy-13033.html  astropy__astropy-13236.html  astropy__astropy-13398.html  astropy__astropy-13453.html  astropy__astropy-13579.html  astropy__astropy-13977.html  astropy__astropy-14096.html  astropy__astropy-14182.html  astropy__astropy-14309.html  astropy__astropy-14365.html  astropy__astropy-14369.html  astropy__astropy-14508.html  astropy__astropy-14539.html  astropy__astropy-14598.html  astropy__astropy-14995.html  astropy__astropy-7166.html  astropy__astropy-7336.html  astropy__astropy-7606.html  astropy__astropy-7671.html  handcrafted__inventory-1.html  medium_strproc__fix-1.html  simple_tiny__fix-1.html
tests/: conftest.py  test_agents.py  test_cli.py  test_docker_run.py  test_grader.py  test_harness.py  test_importer.py  test_integration.py  test_metrics.py  test_parsers.py  test_render_markdown.py  test_site.py  test_status.py
tests/fixtures/self-improve-sample-project/: README.md  pyproject.toml
tests/fixtures/self-improve-sample-project/docs/superpowers/specs/: 2026-06-14-sample-design.md
tests/fixtures/self-improve-sample-project/src/sample/: __init__.py
tests/fixtures/self-improve-sample-project/tests/: test_sample.py
tests/fixtures/tiny_task/: task.json
tests/fixtures/tiny_task/repo/: main.py  test_main.py
