[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-eval"
version = "0.1.0"
description = "Public benchmark for CLI coding agents (Claude Code, Codex, Aider) on SWE-bench Verified."
# Pinned to 3.10: this is the latest Python that builds the old astropy
# repos in SWE-bench Verified (3.11+ breaks the Cython-generated C API in
# the wcslib wrappers). The StrEnum backport in cae/agents/base.py makes
# 3.9 also viable; 3.10 is the widest safe range.
requires-python = ">=3.10,<3.11"
# `datasets` is intentionally NOT a runtime dep — only `cae add-task
# --from-swebench` needs it. Adding it here would force numpy 2.x into
# the venv, which breaks the SWE-bench task setup_cmd (old astropy uses
# np.product, removed in numpy 2.0). Install it via the `importer` extra
# when you actually need to import tasks.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    # pip must be present on PATH inside the venv — the task setup_cmd
    # for SWE-bench tasks runs `pip install -e .[test]`, and uv venvs
    # don't ship pip by default. Installing it here makes `uv sync`
    # place the pip binary in .venv/bin reproducibly.
    # Pinned to <24: pip 24+ requires setuptools' `build_editable` hook,
    # which doesn't exist in our pinned setuptools<60. pip 23.x doesn't
    # require the hook, so it accepts the old build backend.
    "pip<24",
]
# `importer` is for users who run `cae add-task --from-swebench`.
# Pulls in datasets, which transitively requires modern numpy + pyarrow.
importer = [
    "datasets>=2.14",
]
# Pinned toolchain for building the old astropy C extensions that come
# with SWE-bench Verified tasks. Without these, `pip install -e .[test]`
# inside the workdir fails on modern setuptools (the wcslib wrappers
# import `setuptools.dep_util`, which was removed in setuptools 60).
astropy-build = [
    "setuptools<60",
    "setuptools_scm<8",
    "extension-helpers<1",
    "cython<3",
    "pyerfa",
    # `wheel` provides the `bdist_wheel` command that old setuptools
    # delegates to when building sdist metadata. Without it, `pip install
    # -e .[test]` errors with "invalid command 'bdist_wheel'".
    "wheel",
    # NOTE: numpy is intentionally NOT pinned here. The old astropy
    # C extensions (e.g. astropy__astropy-12907) need numpy<1.20, but
    # numpy<1.20 has no prebuilt wheel for Python 3.10 on macOS arm64
    # and won't build on modern toolchains. Result: those tasks' setup_cmd
    # fails in local mode on arm64 macs. They work in docker mode
    # (Linux + x86-64 wheel) and probably also work on Linux arm64
    # (numpy 1.19.5 has a manylinux wheel). Add `numpy<1.20` here if
    # your platform has the right wheel.
]

[project.scripts]
cae = "cae.cli:main"

[tool.setuptools.packages.find]
include = ["cae*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
norecursedirs = ["tests/fixtures"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
include = ["cae", "tests"]
pythonVersion = "3.10"
venv = ".venv"

[tool.uv]
# Pin the Python interpreter uv picks. 3.10 is the latest version that
# builds old astropy's C extensions cleanly (see requires-python above).
required-version = ">=0.4.0"
